--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,16 @@
 }
 
 .pokemon-card {
-  flex-basis: 18%;
+  flex-basis: 10%; 
   margin: 1%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
+  padding: 10px; 
   text-align: center;
   background-color: #f1f1f1;
   border-radius: 5px;
+}
+
+.pokemon-card img {
+  width: 100%;
+  height: auto;
 }
