update teambuilder.js and add css

--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,18 @@ nav a {
 nav a.active {
   color: #007bff;
 }
+
+.selected-pokemon-card {
+  flex-basis: 18%;
+  margin: 1%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+}
+
+.selected-pokemon-card img {
+  width: 100%;
+  height: auto;
+}
