--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@ form button:hover {
 /* Styles for the container of Pokemon cards */
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   width: 55%;
 }
@@ -181,4 +181,40 @@ form button:hover {
   border: 1px solid #007BFF;
   border-radius: 4px;
   background-color: #E9ECEF;
+}
+
+.team-card {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 16px;
+  margin: 16px;
+  background-color: #ffffffc9;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 200px; 
+  height: 300px; 
+}
+
+.team-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.team-card h2 {
+  text-align: center;
+}
+
+.team-card .selected-pokemon-card {
+  width: 50%; 
+  height: 50%; 
+}
+
+.team-card .selected-pokemon-card h3, 
+.team-card .selected-pokemon-card p {
+  
+  font-size: 0.5rem; 
+}
+
+.team-card .selected-pokemon-card img {
+  width: 50%; 
+  height: 50%; 
 }
