--- a/src/App.css
+++ b/src/App.css
@@ -224,3 +224,8 @@ form button:hover {
   width: 55%;
 }
 
+.teams-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* aligns items on the line in the center */
+}
